correct work's link.

--- a/index.html
+++ b/index.html
@@ -149,18 +149,10 @@
                         </p>
                     </div>
                     <div class="btn-wrapper">
-                        <a href="http://melodypiano.main.jp" target="_blank" class="btn">作品を見る&emsp;→</a>
+                        <a href="https://yamabukiruri.github.io/my-portfolio/" target="_blank" class="btn">作品を見る&emsp;→</a>
                     </div>
                 </div>
             </article>
-            <!--<article id="work3-detail" class="detail hide">
-                <div class="modal">
-                    <img src="images/work1.png">
-                    <h3></h3>
-                    <p>説明文</p>
-                </div>
-            </article>-->
-
             <div id="contact" class="wrapper">
                 <div class="container">
                     <h2>Contact</h2>
