--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <p class="fade-in">フロントエンド領域に関心があり、HTML/CSS/JavaScriptを中心に日々勉強をしています。
                                 また、PaizaやAtCoderのコーデイング問題を解くことも好きで、その際はJavaScriptかJavaを使用します。
                                 その他、授業で触れた程度ですが、R言語を使用したこともあります。</p>
-                            <p class="fade-in">現在は主にWEBサイト制作に力を入れていますが、いずれはWEBアプリケーション制作にも取り組んでみたいと考えています。</p>
+                            <p class="fade-in">WEBエンジニアを目指しています。現在最も関心があるのはフロントエンド領域ですが、いずれはバックエンドやUI/UXも学習し、マルチに活躍できるエンジニアになりたいと考えています。</p>
                             <p class="fade-in">よろしくお願いいたします。</p>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
             <div id="works" class="wrapper">
                 <div class="container">
                     <h2>Works</h2>
-                    <p id="works-text">画像をクリックすると詳細をご覧いただけます。</p>
+                    <p id="works-text">画像をクリックすると詳細をご覧いただけます。WEBサイト以外の成果物については<a href="https://github.com/yamabukiruri" target="_blank">github</a>へ。</p>
                     <div id="works-contents">
                         <div class="work fade-in">
                             <img src="images/work1.png" id="work1" class="work-img">
