--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="works" class="wrapper">
                 <div class="container">
                     <h2>Works</h2>
-                    <p id="works-text">画像をクリックすると詳細をご覧いただけます。WEBサイト以外の成果物については<a href="https://github.com/yamabukiruri" target="_blank">＜＜github＞＞</a>へ。</p>
+                    <p id="works-text">画像をクリックすると詳細をご覧いただけます。WEBサイト以外の成果物については<a href="https://github.com/yamabukiruri" target="_blank">【https://github.com/yamabukiruri】</a>へ。</p>
                     <div id="works-contents">
                         <div class="work fade-in">
                             <img src="images/work1.png" id="work1" class="work-img">
