--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="works" class="wrapper">
                 <div class="container">
                     <h2>Works</h2>
-                    <p id="works-text">画像をクリックすると詳細をご覧いただけます。<br>WEBサイト以外の成果物については<a href="https://github.com/yamabukiruri" target="_blank">【https://github.com/yamabukiruri】</a>へ。</p>
+                    <p id="works-text">画像をクリックすると詳細をご覧いただけます。<br>ソースコードは<a href="https://github.com/yamabukiruri" target="_blank">【https://github.com/yamabukiruri】</a>へ。</p>
                     <div id="works-contents">
                         <div class="work fade-in">
                             <img src="images/work1.png" id="work1" class="work-img">
@@ -87,6 +87,14 @@
                         <div class="work fade-in">
                             <img src="images/work2.png" id="work2" class="work-img">
                             <p>ポートフォリオサイト</p>
+                        </div>
+                        <div class="work fade-in">
+                            <img src="images/calculator_readme_img.png" id="work3" class="work-img">
+                            <p>電卓</p>
+                        </div>
+                        <div class="work fade-in">
+                            <img src="images/calender_readme_img.png" id="work4" class="work-img">
+                            <p>スケジュール機能付きカレンダー</p>
                         </div>
                     </div>
                 </div>
@@ -150,6 +158,48 @@
                     </div>
                     <div class="btn-wrapper">
                         <a href="https://yamabukiruri.github.io/my-portfolio/" target="_blank" class="btn">作品を見る&emsp;→</a>
+                    </div>
+                </div>
+            </article>
+            <article id="work3-detail" class="detail hide">
+                <div class="modal">
+                    <video controls src="videos/calculator.mp4"></video>
+                    <h3>シンプルな電卓</h3>
+                    <div class="detail-text">
+                        <h4>概要</h4>
+                        <p>JavaScript学習のアウトプットとして作成しました。ごく普通の電卓です。
+                            影をつけるなどして、やや立体的なデザインにしました。</p>
+                    </div>
+                    <div class="detail-text">
+                        <h4>使用技術</h4>
+                        <p>HTML、CSS、JavaScript</p>
+                    </div>
+                    <div class="detail-text">
+                        <h4>制作日数</h4>
+                        <p>3~4時間</p>
+                    </div>
+                </div>
+            </article>
+            <article id="work4-detail" class="detail hide">
+                <div class="modal">
+                    <video controls src="videos/calendar.mp4"></video>
+                    <h3>スケジュール機能付きカレンダー</h3>
+                    <div class="detail-text">
+                        <h4>概要</h4>
+                        <p>JavaScript学習のアウトプットとして作成しました。スケジュールリスト機能付きのカレンダーです。<br>
+                            カレンダーの赤い下線が引かれている日には、何らかの予定が入っています。
+                            また、ブルーグレーで塗りつぶされている日は、今日の日付を指します（上記の動画は2023/9/6に撮影しました）。<br>
+                            右上の「＋」ボタンを押すと、左からスケジュールリストが現れます。
+                            プルダウンから年月日と時刻を選択し（映像には映っていません）、予定内容を入力してから「追加」ボタンを押すことで、スケジュール帳とカレンダーの両方に予定が追加されます。 予定を削除する場合は、各予定の右端にある「×」ボタンを押すと消えます。
+                            また、カレンダーの赤い下線が引かれている（＝何らかの予定が入っている）日をクリックすると、スケジュールリストが開くと同時に、その日の予定のみが黄色く表示されます。</p>
+                    </div>
+                    <div class="detail-text">
+                        <h4>使用技術</h4>
+                        <p>HTML、CSS、JavaScript</p>
+                    </div>
+                    <div class="detail-text">
+                        <h4>制作日数</h4>
+                        <p>3日</p>
                     </div>
                 </div>
             </article>
