--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <p class="fade-in">フロントエンド領域に関心があり、HTML/CSS/JavaScriptを中心に日々勉強をしています。
                                 また、PaizaやAtCoderのコーデイング問題を解くことも好きで、その際はJavaScriptかJavaを使用します。
                                 その他、授業で触れた程度ですが、R言語を使用したこともあります。</p>
-                            <p class="fade-in">WEBエンジニアを目指しています。現在最も関心があるのはフロントエンド領域ですが、いずれはバックエンドやUI/UXも学習し、マルチに活躍できるエンジニアになりたいと考えています。</p>
+                            <p class="fade-in">私は、将来的にWEBエンジニアを目指しています。現在最も関心があるのはフロントエンド領域ですが、いずれはバックエンドやUI/UXも学習し、マルチに活躍できるエンジニアになりたいと考えています。</p>
                             <p class="fade-in">よろしくお願いいたします。</p>
                         </div>
                     </div>
