add my skill "PHP"

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="detail-text">
                         <h4>使用技術</h4>
-                        <p>AdobeXD、HTML、CSS、JavaScript</p>
+                        <p>AdobeXD、HTML、CSS、JavaScript、PHP</p>
                     </div>
                     <div class="detail-text">
                         <h4>制作日数</h4>
