問い合わせフォームの送信ボタンを作成

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
                         <input type="text" name="email">
                         <p>お問い合わせ内容</p>
                         <textarea name="message" placeholder="こちらにお問い合わせ内容をお書きください。"></textarea>
+                        <div id="submit-btn-wrapper">
+                            <input type="submit" value="送信" id="submit-btn">
+                        </div>
                     </form>
                 </div>
             </div>
