--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
             <div id="contact" class="wrapper">
                 <div class="container">
                     <h2>Contact</h2>
-                    <!--<p><i class="fa-regular fa-envelope"></i>&emsp;yamabukiruri.chi◆gmail.com</p>
-                    <p>（◆を@に変換してご送信ください。）</p>-->
-                    <form method="post" action="contact_check.php">
+                    <p><i class="fa-regular fa-envelope"></i>&emsp;yamabukiruri.chi◆gmail.com</p>
+                    <p>（◆を@に変換してご送信ください。）</p>
+                    <!--<form method="post" action="contact_check.php">
                         <p>お名前</p>
                         <input type="text" name="name">
                         <p>メールアドレス</p>
@@ -218,7 +218,7 @@
                         <div id="submit-btn-wrapper">
                             <input type="submit" value="送信" id="submit-btn">
                         </div>
-                    </form>
+                    </form>-->
                 </div>
             </div>
         </main>
