プロフィール文の変更

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                         <img src="images/profile.jpg">
                         <div id="about-text">
                             <p class="fade-in">ご訪問ありがとうございます。</p>
-                            <p class="fade-in">早稲田大学で文系からWEBエンジニアを目指す学生、CHiです。</p>
-                            <p class="fade-in">フロントエンド領域に関心があり、HTML/CSS/JavaScriptを中心に日々勉強をしています。
-                                また、PaizaやAtCoderのコーデイング問題を解くことも好きで、その際はJavaScriptかJavaを使用します。
-                                その他、授業で触れた程度ですが、R言語を使用したこともあります。</p>
-                            <p class="fade-in">私は、将来的にWEBエンジニアを目指しています。現在最も関心があるのはフロントエンド領域ですが、いずれはバックエンドやUI/UXも学習し、マルチに活躍できるエンジニアになりたいと考えています。</p>
+                            <p class="fade-in">早稲田大学で文系からWEBエンジニアを目指す学生、CHiと申します。</p>
+                            <p class="fade-in">2023年10月からWEB系自社開発の会社にフルスタックエンジニアとして勤めており、業務では主にHTML/CSS/JavaScript/PHPを使用しています。
+                                その他、授業で触れた程度ですが、JavaやR言語を使用したこともあります。</p>
+                            <p class="fade-in">現在は業務で最もよく使うPHPの勉強の他、GitやDocker等の開発に必要な技術周りを学習中です。</p>
+                            <p class="fade-in">開発未経験から入社したため、まだまだ分からないことばかりですが、いずれはマルチに活躍できるエンジニアになりたいと考えています。</p>
                             <p class="fade-in">よろしくお願いいたします。</p>
                         </div>
                     </div>
@@ -124,11 +124,14 @@
                             例として、全体的に丸みのあるオブジェクトを配置したり、スクロールでコンテンツがふわりと浮かんでくるような動きをつけたりしました。
                             また、トップ画面には教室名とイメージキャラクターを動きつきで登場させ、楽しげな雰囲気を演出しました。
                             レスポンシブ対応を施しており、タブレットやスマホではフォーマットを整えるほか、ヘッダーのメニューがハンバーガーメニューに変わるなどの対応がされています。
+                            問い合わせフォームはPHPで作成し、問い合わせがあると教室側へメールが送られる仕組みになっています。
                         </p>
+                        <br>
+                        <p>※現在サイトは封鎖しています。</p>
                     </div>
-                    <div class="btn-wrapper">
+                    <!-- <div class="btn-wrapper">
                         <a href="http://melodypiano.main.jp" target="_blank" class="btn">作品を見る&emsp;→</a>
-                    </div>
+                    </div> -->
                 </div>
             </article>
             <article id="work2-detail" class="detail hide">
